fixed spacing issue

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,10 +1,19 @@
-* {
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+body {
   background-color: #a58d80;
+  margin: 0;
 }
 header {
   display: flex;
   justify-content: space-between;
   background: #0f1418;
+}
+h1 {
+  padding-top: 0;
 }
 .adventure {
   font-family: "Nanum Brush Script", "Arial", "Trebuchet MS", sans-serif;
@@ -14,12 +23,6 @@ header {
   font-size: 40px;
   text-align: center;
 }
-.site-name {
-  color: white;
-  font-family: "Nanum Brush Script", "Arial", "Trebuchet MS", sans-serif;
-  text-align: left;
-  font-size: 30px;
-}
 .in-out {
   text-align: right;
   margin: 0;
@@ -28,6 +31,13 @@ header {
 nav.in-out {
   background: #0f1418;
 }
+.site-name {
+  color: white;
+  font-family: "Nanum Brush Script", "Arial", "Trebuchet MS", sans-serif;
+  text-align: left;
+  font-size: 30px;
+}
+
 button.btn {
   background-color: #0f1418;
   color: white;
@@ -37,15 +47,53 @@ button#logout.btn-no-style {
 }
 h2 {
   font-family: "Truculenta", "Arial", "Trebuchet MS", sans-serif;
+  padding: 0;
+  margin: 10px;
 }
 .attractions {
   font-family: "Truculenta", "Arial", "Trebuchet MS", sans-serif;
   text-align: center;
 }
+div#title {
+  grid-row: 1/4;
+  column-gap: 40px;
+}
+.attraction-list li {
+  display: inline-block;
+  margin: 40px;
+  font-size: 20px;
+}
+a {
+  color: white;
+  text-decoration: none;
+}
+.search-attraction-form {
+  padding: 10px;
+}
+.category,
+.type,
+.near {
+  margin: 10px;
+}
+.wrapper {
+  position: relative;
+  padding-bottom: 40px;
+}
+.vertical-line {
+  border-left: 4px solid black;
+  display: block;
+  height: 50px;
+  margin: 0 auto;
+  width: 1px;
+}
 footer {
-  background-color: black;
+  background-color: #0f1418;
   text-align: center;
   color: white;
-  margin: 20px;
-  padding: 10px;
+  position: fixed;
+  width: 100%;
+  height: 40px;
+  bottom: 0;
+  font-size: 2rem;
+  font-family: "Nanum Brush Script", "Arial", "Trebuchet MS", sans-serif;
 }
